--- a/experiments.tex
+++ b/experiments.tex
@@ -139,13 +139,47 @@ with costly bounding box and viewpoint annotations.
 \subsection{Enriching Existing Detections}
 %\subsection{Fine-Tuning and Viewpoint Estimation}
 \label{sec:exp_enrich}
-High performance object detectors usually generalizes very well. It can handle various intraclass variability, viewpoint change and occlusion. However due to this high generalization, sometimes it is very difficult to get accurate pose, category or 2D-3D matching. Our method, specialized in giving such accurate information, can be applied on any generic object detectors to give high quality metadata.
+In this section, we use our method to enrich the detections provided
+by existing, high-performance object detectors with additional output
+in the form a 3D pose, focal length, and 3D CAD model exemplar shape.
+% High performance object detectors usually generalizes very well. It
+% can handle various intraclass variability, viewpoint change and
+% occlusion. However due to this high generalization, sometimes it is
+% very difficult to get accurate pose, category or 2D-3D matching. Our
+% method, specialized in giving such accurate information, can be
+% applied on any generic object detectors to give high quality metadata.
 
-To show such ability, we evaluated our method on PASCAL 3D dataset \cite{Xiang14}. The dataset augments PASCAL 2012 images with high quality viewpoint annotations thus is ideal to measure pose estimation. The dataset proposes new metric called Average Viewpoint Precision (AVP) where it measures the area under viewpoint precision and detection recall curve. The viewpoints is measured by azimuth similarity. If the distance between predicted azimuth and ground truth azimuth is below a certain threshold, the viewpoint is correct. Note that the baseline methods (V-DPM, VOC-DPM) reported on the PASCAL 3D dataset are variants of DPM where each component of DPM account for various azimuths. Thus V-DPM and VOC-DPM provide discrete azimuth only whereas our method provides 3D viewpoint (yaw, pitch, roll), CAD instance (model index, rendering, depth) and focal length.
+To show such ability, we evaluat our method on the PASCAL3D+
+dataset~\cite{Xiang14}. This dataset augments PASCAL 2012 images with
+high quality viewpoint annotations thus is ideal to measure pose
+estimation. The dataset proposes new metric called Average Viewpoint
+Precision (AVP) where it measures the area under viewpoint precision
+and detection recall curve. The viewpoints is measured by azimuth
+similarity. If the distance between predicted azimuth and ground truth
+azimuth is below a certain threshold, the viewpoint is correct. Note
+that the baseline methods (V-DPM~\cite{Xiang14},
+DPM-VOC+VP~\cite{Pepik12}) reported on the PASCAL3D+ dataset are
+variants of DPM~\cite{Felzenszwalb10} where each component of DPM
+account for various azimuths. Thus V-DPM and VOC-DPM provide discrete
+azimuth only whereas our method provides 3D viewpoint (yaw, pitch,
+roll), CAD instance (model index, rendering, depth) and focal length.
 
-We used detection bounding boxes and augment it using our method to give viewpoint estimation. We used detection bounding boxes from two different methods: VOC-DPM \cite{Pepik12} and R-CNN \cite{Girshick14}. VOC-DPM is a variation of DPM that can estimate viewpoint and is the state-of-the-art performance in viewpoint estimation \cite{Xiang14}. The result is on Table \ref{tab:pascal12} and precision recall curves for car using R-CNN + Ours are on Figure \ref{fig:car_cnn_ap}. 
+\paragraph{Setup.}
+We used detection bounding boxes and augment it using our method to
+give viewpoint estimation. We used detection bounding boxes from two
+different methods: VOC-DPM \cite{Pepik12} and R-CNN
+\cite{Girshick14}. VOC-DPM is a variation of DPM that can estimate
+viewpoint and is the state-of-the-art performance in viewpoint
+estimation \cite{Xiang14}. The result is on Table \ref{tab:pascal12}
+and precision recall curves for car using R-CNN + Ours are on Figure
+\ref{fig:car_cnn_ap}.
 
-We got significant improvement on viewpoint estimation by using our method on top of general purpose detectors. Note that our method estimates azimuth, elevation, in-plane rotation, focal length estimation, fine-grained categorization whereas V-DPM, VOC-DPM only estimate discrete viewpoints.
+We got significant improvement on viewpoint estimation by using our
+method on top of general purpose detectors. Note that our method
+estimates azimuth, elevation, in-plane rotation, focal length
+estimation, fine-grained categorization whereas V-DPM, VOC-DPM only
+estimate discrete viewpoints.
+
 
 Example outputs are on Figure \ref{fig:pascal12cnn}.
 
@@ -200,7 +234,7 @@ Example outputs are on Figure \ref{fig:pascal12cnn}.
   \begin{center}
 \begin{tabular}{|c|c|c|c|c|c|c|}
 \hline
-AP/AVP              & V-DPM \cite{Xiang14} & VOC-DPM \cite{Pepik12}  & \cite{Pepik12} + Ours (discrete) & \cite{Pepik12} + Ours (full) & R-CNN + Ours (discrete) & R-CNN + Ours (full)\\
+AP/AVP              & V-DPM \cite{Xiang14} & DPM-VOC+VP \cite{Pepik12}  & \cite{Pepik12} + Ours (discrete) & \cite{Pepik12} + Ours (full) & R-CNN + Ours (discrete) & R-CNN + Ours (full)\\
 \hline\hline
 car-4v              & 37.2 / 20.2         & 45.6 / 36.9             & 47.6 / 42.7       & 47.6 / \textbf{42.7}        & 49.6 / 41.5         & 49.6 / 41.5\\ \hline
 car-8v              & 37.3 / 23.5         & 47.6 / 36.6             & 47.6 / \textbf{39.8}       & 47.6 / 39.5        & 49.6 / 38.0         & 49.6 / 39.0\\ \hline
@@ -213,7 +247,7 @@ bicycle-16v         & 46.5 / 18.4         & 45.6 / 22.9             & 48.1 / 26.
 bicycle-24v         & 44.4 / 14.3         & 45.9 / 16.7             & 48.1 / 21.5       & 40.1 / 20.9        & 61.7 / \textbf{27.0}         & 61.7 / 23.9\\ \hline
 \end{tabular}
 \end{center}
-\caption{Average Precision(AP) and Average Viewpoint Precision(AVP) on PASCAL 3D dataset\cite{Xiang14}. For combined method (* + Ours), we use bounding boxes from * and augment viewpoint using our method. R-CNN and run our method to produce 2D-3D matching. If our method fails to give viewpoint, it predicts the viewpoint to be 0. Note that our method gives high quality metadata such as continuous 3D viewpoint, CAD model (rendering depth) and fine-grained category, whereas base-line methods gives 1D discrete azimuths. Our R-CNN was not an optimized version so the detection AP is lower than the state-of-the-art R-CNN performance}
+\caption{Average Precision(AP) and Average Viewpoint Precision(AVP) on PASCAL3D+~\cite{Xiang14}. For combined method (* + Ours), we use bounding boxes from * and augment viewpoint using our method. R-CNN and run our method to produce 2D-3D matching. If our method fails to give viewpoint, it predicts the viewpoint to be 0. Note that our method gives high quality metadata such as continuous 3D viewpoint, CAD model (rendering depth) and fine-grained category, whereas base-line methods gives 1D discrete azimuths. Our R-CNN was not an optimized version so the detection AP is lower than the state-of-the-art R-CNN performance}
 \label{tab:pascal12}
 \end{table*}
 
